--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Thu May 28 07:02:40 EDT 2020
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/calbiblio|CALBiblio
+webSSL=false
 webAllowOthers=true
 webPort=8082
-webSSL=false
